--- a/felipe/style.css
+++ b/felipe/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #1E1E1E;
-    --verde: #72d7ff;
+    --cor-de-fundo: #25173f;
+    --azul: #72d7ff;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
@@ -33,7 +33,7 @@ body {
 }
 
 .titulo-principal span {
-    color: var(--verde);
+    color: var(--azul);
 }
 
 
@@ -63,9 +63,9 @@ body {
 
 .botao.ativo{
     background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--verde);
-    border-left: 2px solid var(--verde);
-    border-right: 2px solid var(--verde);
+    border-bottom: 4px solid var(--azul);
+    border-left: 2px solid var(--azul);
+    border-right: 2px solid var(--azul);
 }
 
 .abas-textos{
@@ -87,7 +87,7 @@ body {
 }
 .aba-conteudo-titulo-secundario{
     text-align: center;
-    color: var(--verde);
+    color: var(--azul);
     text-transform: uppercase;
 }
 
@@ -109,7 +109,7 @@ body {
 }
 
 .contador-digito-texto{
-    color: var(--verde);
+    color: var(--azul);
     font-size: 20px;
     margin: 0;
 
